--- a/problem_1.ipynb
+++ b/problem_1.ipynb
@@ -6,6 +6,9 @@
    "source": [
     "### Summary\n",
     "\n",
+    "**독립변수와 종속변수가 범주형 데이터(거절/종종/항상,사용함/안함)에 가깝기 때문에 카이제곱검정을 사용하였다.  \n",
+    "카이제곱검정후 상관관계의 방향성을 판단하기 위해 pearson coefficient를 계산하였다.**\n",
+    "\n",
     "이용도에 따라 사용율에 연관성이 있는지 검정하기 위하여 카이제곱 검정을 실시한 결과,   \n",
     "귀무가설에 대한 chi2 = 474.2942, p = 0.0000 로 유의수준 0.05보다 작으므로 귀무가설을 기각한다.  \n",
     "즉, **이용도는 사용율에 영향을 준다** \n",
